fixed quide alignment

--- a/nest/src/app/shared/components/raven-pan-to-duration/raven-pan-to-duration.component.css
+++ b/nest/src/app/shared/components/raven-pan-to-duration/raven-pan-to-duration.component.css
@@ -22,3 +22,8 @@
   opacity: 0.37;
   margin-left: 10px;
 }
+
+.pan-container {
+  display: flex;
+  align-items: center;
+}
